# hero_gimbal_temp

./: .mxproject  CMakeLists.txt  Makefile  ReadMe.md  STM32F427IIHx_FLASH.ld  hero_gimbal.code-workspace  hero_gimbal.ioc  openocd.cfg
Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  tim.h  usart.h
Core/Src/: can.c  crc.c  dma.c  gpio.c  main.cpp  rtc.c  stm32f4xx_it.c  system_stm32f4xx.c  tim.c  usart.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_uart.c
apps/: cv_communication.cpp  cv_communication.h  gimbal_task.cpp  gimbal_task.h  msg_center.cpp  msg_center.h
bsp/: bsp_data_struct.cpp  bsp_data_struct.h  bsp_tim.cpp  bsp_tim.h  bsp_usart.cpp  bsp_usart.h
bsp/bsp_can/: bsp_can.cpp  bsp_can.h
bsp/bsp_data_struct/: bsp_data_struct.cpp  bsp_data_struct.h
bsp/bsp_led/: bsp_led.cpp  bsp_led.h
bsp/bsp_tim/: bsp_tim.cpp  bsp_tim.h
bsp/bsp_usart/: bsp_usart.cpp  bsp_usart.h
modules/: ReadMe.md  mymath.cpp  mymath.h  topic.cpp  topic.h
modules/logger/: logger.cpp  logger.h
modules/motor/: motor.cpp  motor.h
modules/mymath/: mymath.cpp  mymath.h
modules/topic/: topic.cpp  topic.h
params/: angle.txt  header_temp.txt  pid.txt
